[chore] - Atualização dos arquivos de configuração

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -18,6 +18,7 @@ linter:
 analyzer:
   exclude:
     - "**/*.g.dart"
+    - "**/*.mocks.dart"
     - "lib/packages/**"
   errors:
     missing_required_param: error
