--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
   json_annotation: ^4.8.1
   dartz: ^0.10.1
   dio: ^5.3.3
-  cupertino_icons: ^1.0.2
   flutter_secure_storage: ^9.0.0
   mobx: ^2.2.0
   flutter_mobx: ^2.1.0
   skeleton_text: ^3.0.1
   crypto: ^3.0.3
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +29,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   logger: ^2.0.2+1
   mobx_codegen: ^2.4.0
+  mockito: ^5.4.2
 
 flutter:
   uses-material-design: true
